Fix z-index of background

--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ h1 {
 .links {
   position: absolute;
   bottom: 0;
+  z-index: 1;
   width: 100%;
   height: 16%;
   display: flex;
@@ -196,7 +197,6 @@ h1 {
 .bg-hills {
   position: absolute;
   bottom: 0;
-  z-index: -100;
   width: 100vw;
   height: 25%;
   background-image: url('images/pattern-hills.svg');
@@ -207,6 +207,7 @@ h1 {
 .attribution {
   position: absolute;
   bottom: 4px;
+  z-index: 1;
   width: 100vw;
   opacity: .5;
   font-size: 8px;
